--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "peerjs": "^1.3.1",
     "simple-peer": "^9.9.3",
     "style-resources-loader": "^1.3.3",
     "vue": "^2.6.11",
